fixed overflow scroll issue

--- a/src/components/Work/Work.css
+++ b/src/components/Work/Work.css
@@ -20,7 +20,7 @@
   width: 100%;
   display: grid;
   grid-template-columns: 1fr;
-  overflow-y: scroll;
+  overflow-y: auto;
   gap: 15px;
 }
 
